# WarrenVPN

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/ovpn-config/: Cargo.toml
crates/ovpn-config/src/: lib.rs  options.rs  tests.rs
crates/warrenvpn-cli/: Cargo.toml
crates/warrenvpn-cli/src/: main.rs
crates/warrenvpn-common/: Cargo.toml
crates/warrenvpn-common/src/: lib.rs
crates/warrenvpn-core/: Cargo.toml
crates/warrenvpn-core/src/: dns.rs  killswitch.rs  lib.rs  management.rs  openvpn.rs  store.rs  util.rs
crates/warrenvpn-gui/: Cargo.toml
crates/warrenvpn-gui/src/: main.rs  secret.rs  settings.rs
crates/warrenvpnd/: Cargo.toml
crates/warrenvpnd/src/: connection.rs  dns.rs  killswitch.rs  logind.rs  main.rs  polkit.rs
docs/: ARCHITECTURE.md  DECISIONS.md  IPC-CONTRACT.md  MANUALE-IT.md
packaging/arch/: PKGBUILD  warrenvpn.install
packaging/dbus/: net.warrenvpn.WarrenVPN.Control.xml  net.warrenvpn.WarrenVPN1.conf  net.warrenvpn.WarrenVPN1.service  net.warrenvpn.WarrenVPN1.xml
packaging/desktop/: net.warrenvpn.WarrenVPN.desktop
packaging/man/: warrenvpn.1  warrenvpnctl.1  warrenvpnd.8
packaging/nft/: recover.nft
packaging/polkit/: net.warrenvpn.policy
packaging/scripts/: warrenvpn-updown
packaging/systemd/: warrenvpn-recover.service  warrenvpnd.service
packaging/sysusers/: warrenvpn.conf
packaging/tmpfiles/: warrenvpn.conf
scripts/: demo-gui.sh  fake-openvpn-auth.py  fake-openvpn-sc.py  fake-openvpn.py  open-gui.sh  smoke-auth.sh  smoke-cli.sh  smoke-connect.sh  smoke-sc.sh  smoke-warrenvpnd.sh
